[bdist_wheel]
universal = 1

[flake8]
ignore = E226,E302,E303,E41,E501
max-line-length = 160
max-complexity = 10
exclude = */*migrations

[metadata]
description-file = README.rst

[isort]
atomic = true
multi_line_output = 5
line_length = 160
indent = '    '
combine_as_imports = true
skip = setup.py,.eggs,build

